# curdleproofs.pie

./: .gitignore  README.md  requirements.txt
.github/workflows/: runner.yml
curdleproofs/: commitment.py  crs.py  curdleproofs.py  curdleproofs_transcript.py  grand_prod.py  ipa.py  msm_accumulator.py  opening.py  pyproject.toml  same_msm.py  same_perm.py  same_scalar.py  test_curdleproofs.py  transcript.py  util.py  verify.py  whisk_interface.py
curdleproofs/curdleproofs/: __init__.py  commitment.py  crs.py  curdleproofs.py  curdleproofs_transcript.py  grand_prod.py  ipa.py  msm_accumulator.py  opening.py  same_msm.py  same_perm.py  same_scalar.py  test_curdleproofs.py  util.py  whisk_interface.py
curdleproofs/fixtures/: crs.json  proof.json  tracker_opening_proof.json  verifier_input.json
curdleproofs/py_arkworks_bls12381-stubs/: __init__.pyi
merlin/: __init__.py  merlin_transcript.py  pyproject.toml  strobe.py  test_merlin.py  transcript.py
merlin/merlin/: strobe.py
merlin_transcripts/: pyproject.toml
merlin_transcripts/merlin_transcripts/: merlin_transcript.py  strobe.py  test_merlin.py
