[tool.poetry]
name = "curdleproofs"
version = "0.1.0"
description = "Curdleproofs is a zero-knowledge shuffle argument"
authors = ["Nalin Bhardwaj <nalinbhardwaj@nibnalin.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
py-ecc = "^6.0.0"
merlin = { path = "../merlin/" }

[tool.poetry.dev-dependencies]
mypy = "^0.982"
black = "^22.10.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
