[tool.poetry]
name = "curdleproofs"
version = "0.1.1"
description = "Curdleproofs is a zero-knowledge shuffle argument"
authors = ["Nalin Bhardwaj <nalinbhardwaj@nibnalin.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
py_arkworks_bls12381 = "0.3.5"
merlin_transcripts = "0.1.1"

[tool.poetry.dev-dependencies]
mypy = "^0.982"
black = "^22.10.0"
pytest = "^7.1.3"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
